Fixed padding on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -314,12 +314,18 @@ nav h1 a {
   width: 90%;
 }
 
+#restaurant-container {
+  /* border: 2px solid red; */
+  /* width: 100%; */
+}
+
 #restaurant-container,
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding-left: 20px;
-  width: 50%;
+  /* padding-left: 20px; */
+  /* width: 50%; */
+  padding: 20px 0 20px 20px;
 }
 
 
